Create basic stuff for websockets

--- a/gs/static/index.html
+++ b/gs/static/index.html
@@ -66,6 +66,7 @@
          integrity="sha512-Q+IG0h7As6sfqE2t1Xf5IeamNyCXb4EXxGCA9Mlbpv7xtwurVHNdVDbyWeSQ3ulPf2FRlqeu77Ec3SJDdIR63w=="
          crossorigin="anonymous"
       ></script>
+      <script src='http://threejs.org/examples/js/controls/OrbitControls.js'></script>
       <!-- IndexJs -->
       <script src="main.js" defer type="module"></script>
    </head>
