--- a/gs/static/index.html
+++ b/gs/static/index.html
@@ -58,17 +58,12 @@
          integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
          crossorigin="anonymous"
       ></script>
+      
       <!-- VueJS -->
-      <script src="https://unpkg.com/vue@next"></script>
-      <!-- Three.js -->
-      <script
-         src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r123/three.min.js"
-         integrity="sha512-Q+IG0h7As6sfqE2t1Xf5IeamNyCXb4EXxGCA9Mlbpv7xtwurVHNdVDbyWeSQ3ulPf2FRlqeu77Ec3SJDdIR63w=="
-         crossorigin="anonymous"
-      ></script>
-      <script src='http://threejs.org/examples/js/controls/OrbitControls.js'></script>
+      <!-- <script src="https://unpkg.com/vue@next"></script> -->
+
       <!-- IndexJs -->
-      <script src="main.js" defer type="module"></script>
+      <script src="main.js" type="module"></script>
    </head>
 
    <body class="text-light">
