Add handlers for websocket and init of the scene

--- a/gs/static/index.html
+++ b/gs/static/index.html
@@ -79,15 +79,17 @@
                   </div>
                   <div class="card-body">
                      <div class="row top-buffer">
-                        <label for="identifier">List of Nodes</label>
-                        <ul class="nav-node list-group" id="nodebox">
+                        <p>Identifier : <span id="identifier"></span></p>
+                        <p>Nb drones : <span id="nbDrone"></span></p>
+                        <!-- <label for="identifier">List of Nodes</label>
+                        <ul class="nav-node list-group" id="nodebox">-->
                            <!--<li class="list-group-item">-->
                            <!--<p class="list-group-item-text">Node 1 address</p>-->
                            <!--</li>-->
                            <!--<li class="list-group-item">-->
                            <!--<p class="list-group-item-text">Node 2 address</p>-->
                            <!--</li>-->
-                        </ul>
+                        <!-- </ul> -->
                         <!-- <form>
                             <div class="form-group row">
                                 <input class="form-control" id="node" placeholder="Add new node...">
