Add swarmInit in UI

--- a/gs/static/index.html
+++ b/gs/static/index.html
@@ -112,10 +112,17 @@
                            class="btn-group mr-2"
                            style="margin-right: 2%; margin-bottom: 2%"
                         >
-                           <button class="btn btn-light">Start position</button>
+                           <button class="btn btn-light" id="pattern-initial">
+                              Start position
+                           </button>
                         </div>
                         <div class="btn-group mr-2" style="margin-bottom: 2%">
-                           <button class="btn btn-light">
+                           <button class="btn btn-light" id="pattern-up">
+                             moveUp
+                           </button>
+                        </div>
+                        <div class="btn-group mr-2" style="margin-bottom: 2%">
+                           <button class="btn btn-light" id="pattern-spherical">
                               Spherical pattern
                            </button>
                         </div>
