Add ready status fro UI

--- a/gs/static/index.html
+++ b/gs/static/index.html
@@ -81,6 +81,7 @@
                      <div class="row top-buffer">
                         <p>Identifier : <span id="identifier"></span></p>
                         <p>Nb drones : <span id="nbDrone"></span></p>
+                        <p>Status : <span id="status"></span></p>
                         <!-- <label for="identifier">List of Nodes</label>
                         <ul class="nav-node list-group" id="nodebox">-->
                            <!--<li class="list-group-item">-->
