--- a/gs/static/index.html
+++ b/gs/static/index.html
@@ -68,6 +68,22 @@
 
    <body class="text-light">
       <div id="scene"></div>
+      <div class="container-fluid fixed-bottom">
+         <div class="row">
+            <div class="col-md-9"></div>
+            <div class="col-md-3">
+               <div class="card bg-dark">
+                  <div class="card-header bg-primary">
+                     <button class="btn btn-secondary" id="swap">Swap</button>
+                     <h5 class="card-title">Simulation</h5>
+                  </div>
+                  <div class="card-body" id="secondary-scene">
+                     Test
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>      
       <div class="container-fluid fixed-top">
          <h1 class="text-center">Orbital Swarm</h1>
          <!-- main box -->
