--- a/gs/static/index.html
+++ b/gs/static/index.html
@@ -86,17 +86,40 @@
                   <h5 class="mb-1 mt-1">Actions</h5>
                </div>
                <div class="card-body">
+                  <div class="btn-group-vertical mr-2" style="margin-bottom: 2%">
+                     <button class="btn btn-light" id="pattern-up">
+                        moveUp
+                     </button>
+                     <button class="btn btn-light" id="pattern-down">
+                        move down
+                     </button>
+                  </div>
                   <div class="btn-toolbar">
-                     <div class="btn-group mr-2" style="margin-right: 2%; margin-bottom: 2%">
-                        <button class="btn btn-light" id="pattern-initial">
-                           Start position
-                        </button>
+                     <div class="btn-group-vertical mr-2">
+                        <div class="btn-group mr-2" style="margin-bottom: 2%">
+                           <button class="btn btn-light" id="pattern-z-minus">
+                              Z -
+                           </button>
+                        </div>
+                        <div class="btn-group mr-2" style="margin-bottom: 2%">
+                           <button class="btn btn-light" id="pattern-x-minus">
+                              X -
+                           </button>
+                           <button class="btn btn-light" id="pattern-initial">
+                              Start position
+                           </button>
+                           <button class="btn btn-light" id="pattern-x-plus">
+                              X +
+                           </button>
+                        </div>
+                        <div class="btn-group mr-2" style="margin-bottom: 2%">
+                           <button class="btn btn-light" id="pattern-z-plus">
+                              Z +
+                           </button>
+                        </div>
                      </div>
-                     <div class="btn-group mr-2" style="margin-bottom: 2%">
-                        <button class="btn btn-light" id="pattern-up">
-                           moveUp
-                        </button>
-                     </div>
+                  </div>
+                  <div class="btn-toolbar">
                      <div class="btn-group mr-2" style="margin-bottom: 2%">
                         <button class="btn btn-light" id="pattern-spherical">
                            Spherical pattern
