--- a/gs/static/index.html
+++ b/gs/static/index.html
@@ -51,7 +51,7 @@
    <script src="main.js" type="module"></script>
 </head>
 
-<body class="text-light">
+<body class="text-light" style="background-color: black;">
    <div id="scene"></div>
    <div class="container-fluid fixed-top">
       <!-- main box -->
